--- a/system/LINK_MAPPING.json
+++ b/system/LINK_MAPPING.json
@@ -559,6 +559,7 @@
     ],
     "20251201_switzerland.md": [
       "Швейцария",
+      "Швейцарию",
       "Швейцарией"
     ],
     "20251201_sweden.md": [
